# racing

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
Client/: CMakeLists.txt  clientStuff.cpp  main.cpp  main.qml
Client/Submit/: gain.cpp  main.cpp
Client/Submit/Test/: SendTest.cpp  SomeAnotherTest.cpp
Server/: CMakeLists.txt  backend.cpp  backend.h  main.cpp  main.qml  serverStuff.h
Server/BusinessLogic/: CMakeLists.txt  Winner.cpp  Winner.h
Server/BusinessLogic/Test/: WinnerTest.cpp  tst_tc.cpp
